feat: add admin endpoints to list and create users
